Fix modal button on mobile

--- a/src/app/modal.scss
+++ b/src/app/modal.scss
@@ -109,7 +109,7 @@ body.is-mobile .modal:not(.mod-sidebar-layout) {
   }
 
   .modal-nav-action {
-    margin-top: unset;
+    margin-top: 8px;
     box-shadow: none !important;
     background-color: transparent !important;
     padding: 24px;
